--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^15.5.4"
   },
   "devDependencies": {
-    "@types/react": "^15.0.24",
+    "@types/react": "15.0.24",
     "typescript": "^2.3.2"
   }
 }
